--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">');
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 :root {
   --primary-color: #22254b;
@@ -44,7 +46,7 @@
 .nav-search {
   color: #0a83e6;
 }
-.search {
+.search-input {
   width: 100%;
   height: 46px;
   line-height: 46px;
@@ -94,28 +96,34 @@
   color: #032541;
 }
 main {
+  position: relative;
+  max-width: 1300px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
+  height: 420px;
+  overflow-x: auto;
+  margin-left: 30px;
 }
-.movie {
-  width: 300px;
+.card {
+  height: 420px;
+  width: 150px;
   margin: 1rem;
+  border: none;
   border-radius: 3px;
-  box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
-  position: relative;
-  overflow: hidden;
 }
-.movie img {
-  width: 100%;
+.card img {
+  width: 150px;
+  height: 225px;
 }
 .movie-info h3 {
-  margin: top 0;
+  margin-top: 0;
 }
 .movie-info span {
   background-color: var(--secondary-color);
   padding: 0.25rem 0.5rem;
-  border-radius: 3px;
+  border-radius: 100px;
+  width: auto;
   font-weight: bold;
 }
 .movie-info span.green {
@@ -126,4 +134,30 @@ main {
 }
 .movie-info span.red {
   color: red;
+}
+
+.card-title {
+  font-size: 15px;
+  font-weight: 700;
+  text-decoration: none;
+  color: black;
+}
+.card-title :hover {
+  color: cyan;
+}
+.data_of_movie {
+  font-weight: 400;
+}
+.movie-info {
+  position: relative;
+}
+.rate {
+  position: absolute;
+  bottom: 180px;
+  right: 95px;
+}
+.precentage {
+  font-size: 10px;
+  top: 5;
+  left: 10;
 }
