--- a/css/style.css
+++ b/css/style.css
@@ -96,16 +96,22 @@
   color: #032541;
 }
 main {
-  position: relative;
+  /* position: relative; */
   max-width: 1300px;
-  display: flex;
-  flex-wrap: wrap;
+  margin: 0 auto;
+  /* display: flex; */
+  /* flex-wrap: wrap;
   justify-content: flex-start;
-  height: 420px;
-  overflow-x: auto;
-  margin-left: 30px;
+  margin-left: 30px; */
 }
+
+#movies-list {
+  display: flex;
+  overflow-x: scroll;
+}
+
 .card {
+  flex-shrink: 0;
   height: 420px;
   width: 150px;
   margin: 1rem;
